fix for display on small & large devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -91,3 +91,8 @@
 .table {
     background-color: rgba(245, 246, 250,1.0);
 }
+
+.template-col {
+    padding-right: 2px;
+    padding-left: 2px;
+}
